syntax = "proto3";

package card;

import "abilities.proto";
import "color.proto";
import "cost.proto";
import "effects.proto";
import "targets.proto";
import "types.proto";

message Card {
  string name = 1;
  repeated types.Type types = 2;
  repeated types.Subtype subtypes = 3;

  cost.CastingCost cost = 4;
  bool split_second = 5;
  bool cannot_be_countered = 6;

  repeated color.Color colors = 7;

  string oracle_text = 8;
  string flavor_text = 9;

  optional abilities.Enchant enchant = 10;

  repeated effects.SpellEffect effects = 11;

  repeated abilities.ETBAbility etb_abilities = 12;
  repeated abilities.StaticAbility static_abilities = 13;
  repeated abilities.ActivatedAbility activated_abilities = 14;
  repeated abilities.TriggeredAbility triggered_abilities = 15;

  optional int32 power = 16;
  optional int32 toughness = 17;

  bool vigilance = 18;
  bool flying = 19;
  bool flash = 20;
  bool hexproof = 21;
  bool shroud = 22;
}